# sparklytics

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  FIRST-LAUNCH-RUNBOOK.md  LICENSE  README.md  SECURITY.md  TASKS.md  agents.md  docker-compose.caddy.yml  docker-compose.image.yml  docker-compose.yml  run.sh
.agents/skills/check-facts/: SKILL.md
.agents/skills/sprint-scaffold/: SKILL.md
.claude/: launch.json  settings.json
.claude/agents/: api-contract-checker.md  perf-reviewer.md  security-reviewer.md  sql-reviewer.md
.claude/skills/check-facts/: SKILL.md
.claude/skills/load-test/: SKILL.md
.claude/skills/new-route/: SKILL.md
.claude/skills/sprint-scaffold/: SKILL.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
.interface-design/: system.md
crates/sparklytics-core/: Cargo.toml
crates/sparklytics-core/src/: analytics.rs  billing.rs  config.rs  error.rs  event.rs  lib.rs  visitor.rs
crates/sparklytics-duckdb/: Cargo.toml
crates/sparklytics-duckdb/src/: acquisition.rs  analytics_impl.rs  auth.rs  backend.rs  bot.rs  lib.rs  notifications.rs  schema.rs  session.rs  share.rs  website.rs
crates/sparklytics-duckdb/src/queries/: attribution.rs  bot_filters.rs  events.rs  funnel_results.rs  funnels.rs  goals.rs  journey.rs  metrics.rs  mod.rs  realtime.rs  reports.rs  retention.rs  session_detail.rs  sessions.rs  stats.rs  timeseries.rs
crates/sparklytics-duckdb/tests/: analytics_trait.rs  journey.rs  retention.rs
crates/sparklytics-metadata/: Cargo.toml
crates/sparklytics-server/: Cargo.toml  build.rs
crates/sparklytics-server/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
crates/sparklytics-server/src/auth/: api_keys.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs
crates/sparklytics-server/src/billing/: mod.rs  null.rs
crates/sparklytics-server/src/bot_detection/: mod.rs
crates/sparklytics-server/src/cloud/: api_keys.rs  clerk_auth.rs  clickhouse.rs  config.rs  handlers.rs  mod.rs  pg.rs  tenant_context.rs  usage.rs  webhook.rs
crates/sparklytics-server/src/metadata/: duckdb.rs  mod.rs
crates/sparklytics-server/src/routes/: admin_limits.rs  attribution.rs  bearer_jwt.rs  bot.rs  collect.rs  compare.rs  events.rs  export.rs  funnels.rs  goals.rs  health.rs  ingest_limits.rs  journey.rs  links.rs  metrics.rs  mod.rs  notifications.rs  pageviews.rs  pixels.rs  query.rs  realtime.rs  reports.rs  retention.rs  sessions.rs  share.rs  stats.rs  websites.rs
crates/sparklytics-server/src/scheduler/: alerts.rs  delivery.rs  mod.rs  subscriptions.rs
crates/sparklytics-server/tests/: acquisition_integration.rs  attribution_integration.rs  auth_integration.rs  bot_integration.rs  cloud_integration.rs  collect_integration.rs  compare_integration.rs  events_integration.rs  export_integration.rs  funnels_integration.rs  goals_integration.rs  health_integration.rs  journey_integration.rs  notifications_integration.rs  reports_integration.rs  retention_integration.rs  security.rs  sessions_integration.rs  share_integration.rs  state_metadata_integration.rs  usage_integration.rs  usage_sync_retry_integration.rs  website_integration.rs
crates/sparklytics-server/tests/common/: mod.rs
dashboard/: index.html  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.release-smoke.config.ts  pnpm-lock.yaml  serve-spa.mjs  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
dashboard/app/: globals.css  layout.tsx
dashboard/components/: Providers.tsx
dashboard/e2e/: acquisition.spec.ts  attribution.spec.ts  bots-settings.spec.ts  compare-mode.spec.ts  events-flow.spec.ts  first-launch-onboarding.spec.ts  notifications.spec.ts  release-smoke.spec.ts  reports-flow.spec.ts  reports-modes.spec.ts  runtime-auth-mode.spec.ts
dashboard/hooks/: useAdminLimits.ts  useApiKeys.ts  useAttribution.ts  useAuth.ts  useBots.ts  useCampaignLinks.ts  useEventProperties.ts  useEventTimeseries.ts  useEvents.ts  useExport.ts  useFilters.ts  useFunnelResults.ts  useFunnels.ts  useGoalStats.ts  useGoals.ts  useJourney.ts  useMetrics.ts  useNotifications.ts  usePageviews.ts  useRealtime.ts  useReportRun.ts  useReports.ts  useRetention.ts  useSessionDetail.ts  useSessions.ts  useShare.ts  useStats.ts  useTenant.ts  useTopPages.ts  useTrackingPixels.ts  useUsage.ts  useWebsites.ts
dashboard/lib/: api.ts  config.ts  iso-numeric-to-alpha2.ts  retention-utils.ts  runtime.ts  styles.ts  timezones.ts  tracking.ts  utils.ts
dashboard/public/: s.js
dashboard/src/: App.tsx  index.css
dashboard/test-results/: .last-run.json
dashboard/types/: react-simple-maps.d.ts
data/: sparklytics.db.wal
docker/: Dockerfile
research/: benchmarks.md  duckdb-vs-clickhouse.md  umami-codebase-analysis.md
scripts/: download-geoip.sh  start-fresh-selfhosted-backend.mjs
sdk/: package-lock.json  package.json
sdk/src/: index.ts
specs/: ab-testing-requirements.md  auto-update-daemon-requirements.md  backend-requirements.md  cloud-platform-requirements.md  frontend-requirements.md  sdk-requirements.md
(+95 files in other folders)
