[workspace]
members = [
    "crates/sparklytics-core",
    "crates/sparklytics-duckdb",
    "crates/sparklytics-server",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
duckdb = { version = "1.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
maxminddb = "0.23"
woothee = "0.13"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
clerk-rs = { version = "0.2", features = ["axum"] }
svix = "1"
jsonwebtoken = "9"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
argon2 = "0.5"

[features]
default = ["selfhosted"]
selfhosted = []
cloud = ["clerk-rs", "sqlx", "clickhouse-rs"]

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
strip = true
opt-level = 3
lto = true
