[workspace]
members = [
    "crates/sparklytics-core",
    "crates/sparklytics-duckdb",
    "crates/sparklytics-server",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
duckdb = { version = "1.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
maxminddb = "0.27"
woothee = "0.13"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
jsonwebtoken = "9"
rand = "0.8"
argon2 = "0.5"
base64 = "0.22"
csv = "1.3"
url = "2.5"
psl = "2.1"
ipnet = "2.10"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
strip = true
opt-level = 3
lto = true
