[package]
name = "sparklytics-duckdb"
version = "0.1.0"
edition = "2021"

[dependencies]
sparklytics-core = { path = "../sparklytics-core" }
async-trait = { workspace = true }
duckdb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
