[package]
name = "sparklytics-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sparklytics"
path = "src/main.rs"

[dependencies]
sparklytics-core = { path = "../sparklytics-core" }
sparklytics-duckdb = { path = "../sparklytics-duckdb" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
maxminddb = { workspace = true }
woothee = { workspace = true }
rand = { workspace = true }

[features]
default = ["selfhosted"]
selfhosted = []
cloud = []
